# mkatlas

./: CMakeLists.txt  README.md
src/: ArgParser.cpp  ArgParser.hpp  Canvas.cpp  Canvas.hpp  DistantField.cpp  DistantField.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  JSONWriter.cpp  JSONWriter.hpp  Main.cpp  MaxRects.cpp  MaxRects.hpp  Platform.cpp  Platform.hpp  Range.hpp  Rectangle.hpp  Utils.cpp  Utils.hpp
